# NearbySend

./: .gitignore  README.md  pubspec.yaml  readme-cn.md  readme.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart
lib/app/routes/: app_router.dart
lib/app/theme/: app_theme.dart
lib/core/models/: device.dart  file_transfer.dart
lib/shared/constants/: app_constants.dart
lib/shared/widgets/: error_view.dart  home_screen.dart  loading_view.dart
nearbysend/: .gitignore  README.md  pubspec.yaml
nearbysend/android/app/: build.gradle
nearbysend/ios/Runner/: Info.plist
nearbysend/ios/Runner.xcodeproj/: project.pbxproj
nearbysend/lib/: main.dart
nearbysend/lib/models/: device.dart  transfer.dart
nearbysend/lib/screens/: send_screen.dart  settings_screen.dart
nearbysend/lib/services/: bridge_service.dart  (+1 more)
nearbysend/native/: Cargo.toml
nearbysend/native/src/: api.rs  lib.rs
nearbysend/native/src/connection/: hotspot.rs  mod.rs  wifi_direct.rs
nearbysend/native/src/discovery/: ble.rs  mdns.rs  mod.rs
nearbysend/native/src/platform/: android.rs  macos.rs  mod.rs
nearbysend/native/src/security/: mod.rs  tls.rs
nearbysend/native/src/transfer/: chunking.rs  mod.rs  protocol.rs
nearbysend/test/: widget_test.dart
nearbysend/windows/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: error.rs  lib.rs
rust/src/connection/: mod.rs
rust/src/discovery/: mod.rs
rust/src/transfer/: mod.rs
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
(+27 files in other folders)
