[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.7"
bytes = "1.10.1"
env_logger = "0.11.6"
flutter_rust_bridge = "2.8.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.26"
mdns-sd = "0.13.3"
rustls = "0.23.23"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.2"
uuid = { version = "1.15.1", features = ["v4"] }
